@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-11-27T00:45:22Z",
+  "timestamp" : "2023-11-27T16:12:37Z",
   "count_outdated" : 2029,
   "uniques_outdated" : 660,
-  "count" : 2136,
-  "uniques" : 683,
+  "count" : 2137,
+  "uniques" : 684,
   "views" : [
     {
       "timestamp": "2023-11-13T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-11-14T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 13,
       "count_minmax": [ 13, 13 ],
       "count_decinc": [ 0, 13 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
