@@ -4,8 +4,8 @@
   "views": [
     {
       "timestamp": "2023-11-13T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-11-14T00:00:00Z",
@@ -70,6 +70,11 @@
     {
       "timestamp": "2023-11-26T00:00:00Z",
       "count": 13,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-11-27T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
