@@ -1,3 +1,12 @@
+2023-11-27T16:12:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7007719289 # 2118
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-27
+* notice: last 14d: unq all: 22 107
+* notice: prev accum: outdated-unq outdated-all / unq all: 660 2029 / 683 2136
+* notice: next accum: outdated-unq outdated-all / unq all: 660 2029 / 684 2137
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-11-13 2023-11-27]
+
 2023-11-27T00:45:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6999134486 # 2116
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-27
